; ModuleID = '/home/carl/AnghaBench/mongoose/extr_mongoose.c_mbuf_init.c'
source_filename = "/home/carl/AnghaBench/mongoose/extr_mongoose.c_mbuf_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mbuf = type { i32*, i64, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mbuf_init(%struct.mbuf* %0, i64 %1) #0 {
  %3 = alloca %struct.mbuf*, align 8
  %4 = alloca i64, align 8
  store %struct.mbuf* %0, %struct.mbuf** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load %struct.mbuf*, %struct.mbuf** %3, align 8
  %6 = getelementptr inbounds %struct.mbuf, %struct.mbuf* %5, i32 0, i32 1
  store i64 0, i64* %6, align 8
  %7 = load %struct.mbuf*, %struct.mbuf** %3, align 8
  %8 = getelementptr inbounds %struct.mbuf, %struct.mbuf* %7, i32 0, i32 2
  store i64 0, i64* %8, align 8
  %9 = load %struct.mbuf*, %struct.mbuf** %3, align 8
  %10 = getelementptr inbounds %struct.mbuf, %struct.mbuf* %9, i32 0, i32 0
  store i32* null, i32** %10, align 8
  %11 = load %struct.mbuf*, %struct.mbuf** %3, align 8
  %12 = load i64, i64* %4, align 8
  %13 = call i32 @mbuf_resize(%struct.mbuf* %11, i64 %12)
  ret void
}

declare dso_local i32 @mbuf_resize(%struct.mbuf*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
